Correction scrollbar

--- a/css/mescss/carousel.css
+++ b/css/mescss/carousel.css
@@ -29,8 +29,11 @@ li.carousel-item {
     padding: 0 10px;
     line-height: 1.4;
 }
+::-webkit-scrollbar {
+    height: 2px;
+}
 ::-webkit-scrollbar-track {
-    background-color: darkgrey;
+    background-color: #F2F2F2;
 }
 
 ::-webkit-scrollbar-thumb {
